@@ -578,11 +578,11 @@ class RuleCallContext extends CallContext
         {
             if( $rule->service !== null )
                 return array($rule->service);
-            return array( 'tcp/1-65535', 'udp/1-65535' );
+            return array( 'tcp/0-65535', 'udp/0-65535' );
         }
 
         if( $rule->services->isAny() )
-            return array( 'tcp/1-65535', 'udp/1-65535' );
+            return array( 'tcp/0-65535', 'udp/0-65535' );
         if( $rule->services->isApplicationDefault() )
         {
             if( $rule->apps->isAny() )
